@@ -45,6 +45,13 @@
 ################################################################
 
 
+2011-08-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.9960 released.
+
+        * Added more code for managing FullAuto user files.
+
+
 2011-08-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.9959 released.
